@@ -69,6 +69,11 @@ class AbsoluteConcatenation(dns.exception.DNSException):
     empty name to an absolute name."""
     pass
 
+class NoParent(dns.exception.DNSException):
+    """Raised if an attempt is made to get the parent of the root name
+    or the empty name."""
+    pass
+
 _escaped = {
     '"' : True,
     '(' : True,
@@ -490,6 +495,16 @@ class Name(object):
                 return self.derelativize(origin)
         else:
             return self
+
+    def parent(self):
+        """Return the parent of the name.
+        @rtype: dns.name.Name object
+        @raises NoParent: the name is either the root name or the empty name,
+        and thus has no parent.
+        """
+        if self == root or self == empty:
+            raise NoParent
+        return Name(self.labels[1:])
         
 root = Name([''])
 empty = Name([])
